# claude-agent-rust-sdk

./: .clippy.toml  .dockerignore  .gitignore  .pre-commit-config.yaml  .rustfmt.toml  1x  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONFIGURATION.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.template  LICENSE-APACHE  LICENSE-MIT  PRODUCTION_CONFIG.md  README.md  RELEASE.md  ROADMAP.md  clippy.toml  deny.toml  justfile  run_e2e.sh  test_summary.md
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml
.sisyphus/notepads/ci-optimization/: learnings.md
benches/: mcp_benchmarks.rs
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/archive/refactor_mcp_constructors_20260113/: metadata.json  plan.md  spec.md
conductor/tracks/refactor_mcp_constructors_20260113/: plan.md
conductor/tracks/review_demo_tests_20260113/: plan.md
crates/api/: Cargo.toml
crates/api/examples/: agents.rs  basic_query.rs  filesystem_agents.rs  hooks.rs  include_partial_messages.rs  interactive_client.rs  max_budget_usd.rs  mcp_calculator.rs  plugin_example.rs  quick_start.rs  setting_sources.rs  stderr_callback_example.rs  streaming_mode.rs  system_prompt.rs  tool_permission_callback.rs  tools_option.rs
crates/api/src/: client.rs  lib.rs  query.rs  sessions.rs
crates/api/tests/: client.rs  client_coverage.rs  e2e_control.rs  e2e_live.rs  e2e_sessions.rs  integration.rs  streaming.rs
crates/core/: Cargo.toml
crates/core/src/: agent.rs  control.rs  hooks.rs  lib.rs  permissions.rs  session.rs  streaming.rs  types.rs
crates/core/tests/: agent_control_test.rs  agent_lifecycle_test.rs  agent_test.rs  hooks_test.rs  permissions_test.rs  session_test.rs  streaming_test.rs  tool_callbacks.rs
crates/core/tests/common/: mod.rs
crates/mcp/: Cargo.toml
crates/mcp-sdk/: Cargo.toml
crates/mcp-sdk/src/: error.rs  lib.rs  server.rs  tool.rs
crates/mcp-sdk/tests/: run_stdio_test.rs  stdio_test.rs
crates/mcp/benches/: mcp_benchmarks.rs
crates/mcp/src/: lib.rs  manager.rs  rate_limiter.rs  schema.rs  server.rs  transport_factory.rs  transports.rs
crates/mcp/tests/: http_init.rs  http_transport.rs  manager.rs  proptest_mcp.rs  sdk_server.rs  sse_transport.rs
crates/transport/: Cargo.toml
crates/transport/src/: lib.rs  parser.rs  reader.rs  subprocess.rs
crates/transport/tests/: buffering.rs  parser.rs  subprocess_integration.rs  transport.rs
crates/types/: Cargo.toml
crates/types/src/: config.rs  error.rs  lib.rs  message.rs  security.rs
crates/types/tests/: config_types.rs  errors.rs  hooks_types.rs  initialization_error.rs  message_types.rs  security_types.rs  types.rs
demos/: Cargo.toml  MIGRATION_PROGRESS.md  README.md
demos/common/: Cargo.toml
demos/common/src/: lib.rs  test_utils.rs
demos/email-agent/: Cargo.toml
demos/email-agent/src/: main.rs
demos/email-agent/tests/: integration_test.rs
demos/hello-world/: Cargo.toml  README.md
demos/hello-world-v2/: Cargo.toml  README.md
demos/hello-world-v2/src/: main.rs
demos/hello-world-v2/tests/: integration_test.rs
demos/hello-world/src/: main.rs
demos/hello-world/tests/: integration_test.rs
demos/research-agent/: Cargo.toml
demos/research-agent/src/: main.rs
demos/research-agent/tests/: integration_test.rs
demos/resume-generator/: Cargo.toml  README.md
demos/resume-generator/src/: main.rs
demos/resume-generator/tests/: integration_test.rs
demos/simple-chatapp/: Cargo.toml
demos/simple-chatapp/src/: main.rs
demos/simple-chatapp/tests/: integration_test.rs
docs/: index.md
docs/guides/: agent_skills.md  cost_usage.md  custom_tools.md  file_checkpointing.md  handling_permissions.md  hooks.md  http-transport.md  mcp.md  plugins.md  session_management.md  slash_commands.md  sse-transport.md  streaming_input.md  structured_output.md  subagents.md  system_prompts.md  testing.md  todo_lists.md  transport-selection.md  user_approvals.md
examples/: agents.rs  basic_query.rs  filesystem_agents.rs  hooks.rs  include_partial_messages.rs  interactive_client.rs  max_budget_usd.rs  mcp_calculator.rs  plugin_example.rs  quick_start.rs  setting_sources.rs  stderr_callback_example.rs  streaming_mode.rs  system_prompt.rs  tool_permission_callback.rs  tools_option.rs
src/: lib.rs
src/api/: client.rs  mod.rs  query.rs  sessions.rs
src/core/: agent.rs  control.rs  hooks.rs  mod.rs  permissions.rs  session.rs  streaming.rs
src/mcp/: manager.rs  rate_limiter.rs  server.rs  transport_factory.rs  transports.rs
src/transport/: mod.rs  parser.rs  reader.rs  subprocess.rs
src/types/: error.rs  hooks.rs  message.rs  security.rs
tests/: agent_control_test_core.rs  agent_lifecycle_test_core.rs  agent_test_core.rs  buffering_transport.rs  client_api.rs  client_coverage_api.rs  config_types_types.rs  e2e_control_api.rs  e2e_edge_cases_api.rs  e2e_live_api.rs  e2e_sessions_api.rs  errors_types.rs  hooks_test_core.rs  hooks_types_types.rs  http_init_mcp.rs  http_transport_mcp.rs  initialization_error_types.rs  integration_api.rs  manager_mcp.rs  message_types_types.rs  parser_transport.rs  permissions_test_core.rs  proptest_mcp_mcp.rs  sdk_server_mcp.rs  security_types_types.rs  session_test_core.rs  sse_transport_mcp.rs  streaming_api.rs  streaming_test_core.rs  tool_callbacks_core.rs  transport_transport.rs  types_test_core.rs  types_types.rs
tests/common_api/: mod.rs
tests/common_core/: mod.rs
tests/e2e_common/: mod.rs
