[workspace]
resolver = "2"
members = [
    "crates/types",
    "crates/transport",
    "crates/mcp",
    "crates/core",
    "crates/api",
]

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
async-trait = "0.1"
async-stream = "0.3"
futures = "0.3"
uuid = { version = "1.6", features = ["v4", "serde"] }
which = "8.0"
rmcp = { version = "0.14.0", features = ["server", "client"] }
schemars = "1.2"
tokio-util = "0.7"
tokio-stream = "0.1"
secrecy = { version = "0.10", features = ["serde"] }
subtle = "2.5"
proptest = "1.10"
governor = "0.10"
criterion = "0.8"
reqwest = { version = "0.13", features = ["json"] }
dirs = "6.0"
pin-project-lite = "0.2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/anthropics/claude-agent-rust"
