[package]
name = "claude-agent"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/anthropics/claude-agent-rust"
description = "Rust SDK for Claude Code agent"

[features]
default = ["mcp"]
mcp = ["dep:rmcp", "dep:governor"]
full = ["mcp"]

[dependencies]
# Async
tokio = { version = "1.50", features = ["full"] }
async-trait = "0.1"
async-stream = "0.3"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.2"

# Error handling
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Utilities
uuid = { version = "1.23", features = ["v4", "serde"] }
which = "8.0"
dirs = "6.0"
chrono = "0.4"
pin-project-lite = "0.2"

# Security
secrecy = { version = "0.10", features = ["serde"] }
subtle = "2.5"

# Streams
tokio-stream = { version = "0.1", features = ["sync"] }

# MCP (optional)
rmcp = { version = "1.4.0", features = ["server", "client", "macros", "transport-io", "transport-child-process", "transport-streamable-http-client", "transport-streamable-http-client-reqwest"], optional = true }
governor = { version = "0.10", optional = true }

[dev-dependencies]
proptest = "1.11"
criterion = "0.8"
tempfile = "3"

[[bench]]
name = "mcp_benchmarks"
harness = false
