[package]
name = "claude-agent-mcp-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "In-process MCP server support for Claude Agent SDK"

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
