[package]
name = "claude-agent-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
claude-agent-types = { path = "../types" }
claude-agent-transport = { path = "../transport" }
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
reqwest.workspace = true
tracing.workspace = true
governor.workspace = true

[dev-dependencies]
wiremock = "0.6"
criterion.workspace = true
proptest.workspace = true

[[bench]]
name = "mcp_benchmarks"
harness = false
