[package]
name = "email-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
claude-agent-api.workspace = true
claude-agent-types.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
claude-agent-demos-common = { path = "../common", features = [] }
