[package]
name = "resume-generator"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
claude-agent-api.workspace = true
claude-agent-types.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
